# XPL

./: .gitignore  LICENSE  README.md  config.toml  example.py  pyproject.toml  xpl
lib/: bm25.py  config.py  db.py  exception.py  processor.py  query.py  summary.py  utils.py
