[project]
name = "xpl"
version = "0.1.0"
description = "A simple cli tool for text comprehension"
authors = [
    {name = "tolios",email = "apostolos.kakampakos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "pypdf (>=5.3.0,<6.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
