[project]
name = "xpl"
version = "0.1.1"
description = "A simple cli tool for text comprehension"
authors = [
    {name = "tolios",email = "apostolos.kakampakos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "chromadb (>=0.6.3,<0.7.0)",
    "toml (>=0.10.2,<0.11.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "markitdown (>=0.0.1a4,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
